--- a/nama_kelompok/Bio Dinul/biodata.html
+++ b/nama_kelompok/Bio Dinul/biodata.html
@@ -21,11 +21,11 @@
             <table class="w-full text-left border border-gray-300">
                 <tr class="border-b">
                     <th class="p-2 bg-gray-200 w-1/3">Nama</th>
-                    <td class="p-2">Budi Santoso</td>
+                    <td class="p-2">Din hyt</td>
                 </tr>
                 <tr class="border-b">
                     <th class="p-2 bg-gray-200">Tempat, Tanggal Lahir</th>
-                    <td class="p-2">Yogyakarta, 12 Januari 2003</td>
+                    <td class="p-2">Yogyakarta, 05 April 2011</td>
                 </tr>
                 <tr class="border-b">
                     <th class="p-2 bg-gray-200">Jenis Kelamin</th>
@@ -33,11 +33,11 @@
                 </tr>
                 <tr class="border-b">
                     <th class="p-2 bg-gray-200">Alamat</th>
-                    <td class="p-2">Jl. Kaliurang Km 5, Sleman</td>
+                    <td class="p-2">Jl. jetis Demangan</td>
                 </tr>
                 <tr>
                     <th class="p-2 bg-gray-200">Email</th>
-                    <td class="p-2">budi@example.com</td>
+                    <td class="p-2">DHyt@Corp.com</td>
                 </tr>
             </table>
         </div>
