--- a/nama_kelompok/Bio Dinul/biodata.html
+++ b/nama_kelompok/Bio Dinul/biodata.html
@@ -13,8 +13,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-4xl mx-auto bg-white p-6 shadow-lg rounded-lg">
 
         <div class="flex justify-center items-center">
-            <img src="learning-basic-web-dev\nama_kelompok\Bio Dinul\orangeCar.jpeg" alt="Foto Diri"
-                class="rounded-lg shadow-md">
+            <img src="https://i.imgflip.com/3u04h5.jpg?a484968" alt="Foto Diri" class="rounded-lg shadow-md">
         </div>
 
         <div>
